<resources>
    <string name="app_name">Assign 4 2018 Denis Kelleher</string>

    <!-- Tab Frag Strings -->
    <string name="tab_text_1">HOME</string>
    <string name="tab_text_2">PRODUCTS</string>
    <string name="tab_text_3">ORDERS</string>
    <string name="tab_text_4">COLLECTION</string>
    <!-- Home Frag Strings -->
    <string name="Home_tab_text_1">Welcome to DK Assign 4 Clothing Company Online Store</string>
    <string name="Home_tab_text_2">Branded Casual Wear</string>
    <string name="Home_tab_text_3">Custom T-Shirt Printing</string>
    <!-- Image Descriptions -->
    <string name="home_tab_image">Home Tab Image</string>
    <string name="product_icon">Product Icon Image</string>
    <string name="order_icon">Order Icon Image</string>

    <!-- Orders Frag Strings-->
    <string name="order_icon_text">Take Photo for T-Shirt</string>
    <string name="orders_hint_name">Enter Your Name</string>
    <string name="address_hint_name">Enter Delivery Address</string>
    <string name="orders_send_button">Send Email</string>
    <string name="orders_delivery">Delivery Address</string>
    <string name="clear_collect">Clear Collection</string>
    <string name="clear_product">Clear Product</string>


    <!-- Spinner Strings-->
    <string-array name="ui_time_entries">
    <item>" 2"</item>
    <item>" 3"</item>
    <item>" 4"</item>
    <item>" 5"</item>
    <item>10</item>
    <item>14</item>
    </string-array>



    <!-- Orders Strings-->
    <string name="order_intro">To whom it concerns,</string>
    <string name="ready_time">Collection in (days)</string>
    <string name="order_message_1">Please find my order attached:</string>
    <string name="order_message_2">Product Selected: </string>
    <string name="order_message_collect">I will collect my order in </string>
    <string name="collect_units"> days </string>
    <string name="order_message_deliver">Please deliver my order to </string>
    <string name="collection_location"> from </string>
    <string name="order_message_end">Regards</string>
    <string name="customer_name_blank">You did not enter your name.</string>
    <string name="notification_title">Notification!</string>
    <string name="image_confirm">Image saved successfully </string>
    <string name="to_email">my-tshirt@sda.ie</string>
    <string name="email_subject">Order Request </string>
    <string name="photo_taken_text">This is the Photo Taken \n (Click again to take another)</string>
    <string name="no_product_set">Product Not Set</string>
    <string name="no_customer">Customer Name Not Set</string>
    <string name="no_address_set">Enter a Delivery Address\n OR\n Select a Collection Location</string>
    <string name="both_address_set">Both Delivery Address AND Collection Selected\n Please clear one field (Collection or Delivery Address)</string>

    <!-- File Provider -->
    <string name="file_provider_authority" translatable="false">com.example.denis.assign42018</string>

    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
