<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pageBackground">

    <TextView
        android:id="@+id/textView1"
        style="@style/BigHeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/Home_tab_text_1" />

    <TextView
        android:id="@+id/textView2"
        style="@style/MediumHeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/Home_tab_text_2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/SmallHeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="8dp"
        android:text="@string/Home_tab_text_3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:contentDescription="@string/home_tab_image"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/mad_penguins" />
</LinearLayout>
