<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:orientation="vertical">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pageBackground">


        <EditText
            android:id="@+id/editCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:hint="@string/orders_hint_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/big_text"
            android:textColorHint="@color/medium_text" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="101dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/newphotocamera" />

        <TextView
            android:id="@+id/imageText"
            style="@style/MediumHeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:text="@string/order_icon_text"
            android:textColor="@color/big_text" />

        <EditText
            android:id="@+id/editOptional"
            style="@style/SmallHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="16dp"
            android:hint="@string/address_hint_name"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textColorHint="@color/medium_text" />


        <TextView
            android:id="@+id/editCollect"
            style="@style/MediumHeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignStart="@+id/editCustomer"
            android:layout_below="@id/editOptional"
            android:layout_marginBottom="76dp"
            android:layout_marginTop="54dp"
            android:autoText="false"
            android:padding="8dp"
            android:text="@string/ready_time"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/editCollect"
            android:layout_below="@id/editOptional"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"

            android:layout_toStartOf="@id/editCollect"
            android:gravity="left"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button"
            style="@style/SmallHeaderTextStyle"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/orders_send_button"
            android:textColor="@color/big_text" />

        <Button
            android:id="@+id/clear_product"
            style="@style/SmallestTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/clear_product"
            android:textColor="@color/design_default_color_primary_dark" />

        <Button
            android:id="@+id/clear_collect"
            style="@style/SmallestTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/clear_product"
            android:text="@string/clear_collect"
            android:textColor="@color/design_default_color_primary_dark" />

    </RelativeLayout>
</ScrollView>